SweetAlert, Password Validations, ForgotPassword
- Add SweetAlert to student's and college's home
- Add strong password validations to signup forms
- Create account/tokens.py
- Provide hashid capability to forgot_password and activation
- Change association flow from 3 step form to 1 (select options)
- Create recruitment/fields.py (To ease encoding and decoding of hashid-ed choices)
- Create custom password validation
- Create forgot password email task
- Improve account/templates

--- a/ipu/dstatic/account/css/base_home_layout.css
+++ b/ipu/dstatic/account/css/base_home_layout.css
@@ -606,6 +606,11 @@ form#search input {
   margin-left: 5px !important;
 }
 
+form h5 {
+	/* Form Fieldset Bottom Border */
+	border-bottom: 3px solid;
+	margin: 3% 0;
+}
 
 /* */
 
