--- a/ipu/templates/account/forgot_password.html
+++ b/ipu/templates/account/forgot_password.html
@@ -1,10 +1,16 @@
 {% extends 'account/base.html' %}
+{% load staticfiles %}
+{% load material_form %}
 {% block title %} Forgot Password {% endblock %}
 {% block content %} 
-        <h4>Forgot Password</h4>
-        <form action = "http://127.0.0.1:8000/account/forgot_password/" method = 'post'>
-            {% csrf_token %}
-            {{ form.as_p }}
-                <button type="submit" name="forgot_password" class="btn waves-effect waves-light left">Help Me</button>
-            </form>
+	<div id="forgot-password-form-div" class="row">
+		<h4 class="col s12 center teal-text">Forgot Password</h4>
+		<form class="col s8 offset-s2" action="{% url 'forgot_password' %}" method='POST' id="forgot-password-form">
+			{% csrf_token %}
+			{% form form=forgot_password_form %}{% endform %}
+			<div class="col s12">
+				<button type="submit" name="forgot_password" class="btn btn-waves-light col s8 offset-s2" style="width: 80%">Proceed</button>
+			</div>
+		</form>
+	</div>
 {% endblock %}
