--- a/ipu/templates/account/forgot_password_email_body_text.html
+++ b/ipu/templates/account/forgot_password_email_body_text.html
@@ -1,8 +1,22 @@
-Hi {{ username }},
-We know you have a short term memory!!
+{% autoescape off %}
+Hey <b>{{ username }}</b>!
 
-Use the below link to reset your password. And this time try to keep something easy like your name etc.
+To initiate the password reset process for your GGSIPU Training &amp; Placement Cell Account,
+click the link below:
 
-{{ protocol }}://{{ domain }}{% url 'reset_password' uid=uid token=token %}
+{{ protocol }}://{{ domain }}{% url 'reset_password' user_hashid=user_hashid token=token %}
 
-Thanks
+If clicking the link above doesn't work, please copy and paste the URL in a new browser
+window instead.
+
+
+Note: The reset link will be valid only for <b>{{ days }}</b> day{{ days|pluralize }}.
+
+
+Sincerely,
+
+Development &amp; Maintenance Team
+Training &amp; Placement Cell,
+Guru Gobind Singh Indraprastha University
+
+{% endautoescape %}
