--- a/ipu/templates/college/association_requests.html
+++ b/ipu/templates/college/association_requests.html
@@ -1,6 +1,7 @@
 {% load staticfiles %}
-<!-- <script src="{% static 'material/js/jquery-2.2.0.js' %}"></script> -->
+<!-- {# <script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
 {% include 'material/includes/material_js.html' %}
+#}-->
 <div class="container">
 	<div class="col s8 offset-s2 request-content">
 		{% for ass in associations %}
@@ -22,4 +23,4 @@
 		{% endfor %}
 	</div>
 </div>
-<script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
+<!-- <script src="{% static 'material/js/jquery-2.2.0.js' %}"></script> -->
