--- a/ipu/templates/account/forgot_password_email_sent.html
+++ b/ipu/templates/account/forgot_password_email_sent.html
@@ -1,5 +1,7 @@
 {% extends 'account/base.html' %}
 {% block title %} Forgot Password Email Sent {% endblock %}
 {% block content %} 
-    We have a sent a reset link to your email address {{ email }}. Click on it to reset your password.
+	We've emailed you instructions for resetting your password. If an account exists with the email you entered, you should receive them shortly.
+	<br>
+	If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder.
 {% endblock %}
