--- a/ipu/templates/account/inactive.html
+++ b/ipu/templates/account/inactive.html
@@ -6,12 +6,11 @@
 	<div class="container blue-text">
 		<div class="row">
 			<div class="col s8 offset-s2">
-				<h3> OOPS! </h3>
+				<h3> Oops... </h3>
 				<br>
 				<p> Your account is inactive. </p>
-				<p> An account activation link was sent to your registered email address {{ user.email }}.</p>
-				<p> Click on the activation link in the email. </p>
-				<p> Please check your SPAM folder also incase you haven't yet received the email. </p>
+				<p> We've emailed you the instructions for activating account to your registered email address {{ user.email }}.</p>
+				<p> If you don't receive an email, please make sure you've entered the correct email address you registered with, and check your spam folder. </p>
 			</div>
 		</div>
 		<div class="row">
