--- a/ipu/templates/account/set_password.html
+++ b/ipu/templates/account/set_password.html
@@ -1,14 +1,31 @@
 {% extends 'account/base.html' %}
+{% load staticfiles %}
+{% load material_form %}
 {% block title %} Set Password {% endblock %}
 {% block content %} 
-{% if not validlink %}
-<h3> The reset password link is either used or invalid. Please try resetting again by click <a href="{% url 'forgot_password' %}">here</a> </h3>
-{% else %}
-            <h4>Set Password</h4>
-            <form method = 'post'>
-                {% csrf_token %}
-                {{ form.as_p }}
-                        <button type="submit" name="resetpassword" class="btn waves-effect waves-light left">Reset Password</button>
-            </form>
-{% endif %}
+	{% if successful %}
+		<div class="row">
+			<h3 class="center col s12 flow-text teal-text text-accent-4">Your password has been reset successfully!</h3>
+			<p class="center col s12 flow-text blue-text">Hope you don't forget it this time.</p>
+			<div class="col s12">
+				<a class="btn btn-waves-light col s8 offset-s2" style="width: 80%" href="{% url 'auth' %}">Login &nbsp;<i class="fa fa-sign-in fa-2x"></i></a>
+			</div>
+		</div>
+	{% else %}
+		{% if not validlink %}
+			<h3 class="center flow-text red-text"> The reset password link is invalid.</h3>
+			<p class="center flow-text blue-text">If you're viewing this page after clicking the reset link sent to your registered email address, then chances are that the reset link has expired.<br>Please try resetting again by clicking <b><a href="{% url 'forgot_password' %}">here</a></p></b>
+		{% else %}
+		<div id="password-reset-form-div" class="row">
+			<h4 class="col s12">Set Password</h4>
+			<form class="col s12" action="{% url 'reset_password' user_hashid=user_hashid token=token %}" method='POST' id="password-reset-form">
+				{% csrf_token %}
+				{% form form=password_reset_form %}{% endform %}
+				<div class="col s12">
+					<button type="submit" name="resetpassword" class="btn btn-waves-light col s8 offset-s2" style="width: 80%">Reset Password</button>
+				</div>
+			</form>
+		</div>
+		{% endif %}
+	{% endif %}
 {% endblock %}
