--- a/ipu/templates/college/edit.html
+++ b/ipu/templates/college/edit.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 {% load material_form %}
 <script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
-{% include 'material/includes/material_js.html' %}
+<!-- {% include 'material/includes/material_js.html' %} -->
 {% if success_msg %}<div class="card green accent-1 center success"><p>{{ success_msg }}</p></div>{% endif %}
 <form action="{% url 'edit_college_profile' %}" method='POST' id="edit-profile-form" enctype="multipart/form-data">
 	{% csrf_token %}
