--- a/ipu/templates/dummy_company/manage_dummy_home.html
+++ b/ipu/templates/dummy_company/manage_dummy_home.html
@@ -54,7 +54,7 @@
 <!--                                     -->
 <div id="createds" class="col s12 m10 offset-m1">
 	<div class="col s12">
-		<h4 class="center" style="color: goldenrod; margin-bottom:7%;">Create Dummy Session</h4>
+		<h4 class="center" style="color: goldenrod;">Create Dummy Session</h4>
 		<form action="{% url 'create_dsession' %}" method='POST' class="col s12" id="create-dummy-session-form">
 			{% csrf_token %}
 			{% form form=create_dummy_session_form %}{% endform %}
