--- a/ipu/templates/student/companies_in_my_college.html
+++ b/ipu/templates/student/companies_in_my_college.html
@@ -21,10 +21,10 @@
 								<i class="material-icons right">more_vert</i>
 							</span>
 							<h6>{{ htmlid|slice:":-1"|title }} offering <b>&#8377;{{ enrolled.salary }} LPA</b></h6>
-							<p><b>{{ e.date|timeuntil }}</b> left to withdraw application</p>
+							<p><b class="timeleft">{{ e.date|timeuntil }}</b> left to withdraw application</p>
 						</div>
 						<div class="card-action">
-							<a class="change-enrollment" href="{% url 'apply' e.sessid %}">Withdraw Application</a>
+							<a class="change-enrollment" data-timeleft="{{ e.date|timeuntil }}" href="{% url 'apply' e.sessid %}">Withdraw Application</a>
 						</div>
 						<div class="card-reveal">
 							<span class="card-title grey-text text-darken-4"><b>Details</b><i class="material-icons right">close</i></span>
@@ -73,7 +73,7 @@
 							<p><b>{{ u.date|timeuntil }}</b> left to apply</p>
 						</div>
 						<div class="card-action">
-							<a class="change-enrollment" href="{% url 'apply' u.sessid %}">Apply</a>
+							<a class="change-enrollment" data-timeleft="{{ u.date|timeuntil }}" href="{% url 'apply' u.sessid %}">Apply</a>
 						</div>
 						<div class="card-reveal">
 							<span class="card-title grey-text text-darken-4"><b>Details</b><i class="material-icons right">close</i></span>
